# SobolevSegmenter

./: CMakeLists.txt  README.md  SobolevSegmenter.cxx  SobolevSegmenter.xml  Thumbs.db
Data/Baseline/: SobolevSegmenterTest.nrrd.md5
Data/Input/: SobolevSegmenterInputVolume-label.nrrd.md5  SobolevSegmenterInputVolume.nrrd.md5
Testing/Cxx/: CMakeLists.txt
